apps/base/home-automation/otbr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otbr
  namespace: apps
  labels: &labels
    app: otbr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: false
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: home.harville.dev/otbr
                    operator: In
                    values: ["true"]
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values: [thinkcentre-01]
      containers:
        - name: otbr
          image: docker.io/bnutzer/otbr-tcp:sha-a04da0c@sha256:881514caacf0829ffac7edca44f538010af0c098e9f817b939612e66a21f4004
          ports:
            - name: rest
              containerPort: 8081
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
              add: [IPC_LOCK, NET_ADMIN]
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: data
              mountPath: /var/lib/thread
            - name: tun
              mountPath: /dev/net/tun
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          startupProbe:
            exec:
              command: [wrap-ot-ctl, state]
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            exec:
              command: [wrap-ot-ctl, state]
            periodSeconds: 10
          livenessProbe:
            exec:
              command: [wrap-ot-ctl, state]
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: otbr-data
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: otbr
  namespace: apps
spec:
  selector:
    app: otbr
  ports:
    - name: rest
      port: 8081
      targetPort: rest
